<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGreen"
    tools:context=".view.activities.auth_activity.fragments.ForgotPassFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/horizontal2_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical9_gl"
        app:layout_constraintStart_toStartOf="@id/vertical1_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal1_gl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/normalText"
        android:textSize="@dimen/title3"
        app:layout_constraintEnd_toEndOf="@id/vertical9_gl"
        app:layout_constraintStart_toStartOf="@id/vertical1_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal25_gl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/please_enter_your_email"
        android:textAllCaps="false"
        android:textColor="@color/normalText"
        android:textSize="@dimen/paragraph2"
        app:layout_constraintBottom_toBottomOf="@id/horizontal35_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical9_gl"
        app:layout_constraintStart_toStartOf="@id/vertical1_gl" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPassEmail_til"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/vertical9_gl"
        app:layout_constraintStart_toStartOf="@id/vertical1_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal35_gl"
        app:layout_constraintBottom_toBottomOf="@id/horizontal5_gl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassEmail_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp"
            android:background="@drawable/input_bg"
            android:hint="@string/enter_your_email"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/paragraph"
            android:textColorHint="@color/hintText"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPassSend_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/title3"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontal7_gl"
        app:layout_constraintEnd_toStartOf="@+id/vertical9_gl"
        app:layout_constraintStart_toStartOf="@+id/vertical1_gl"
        app:layout_constraintTop_toBottomOf="@id/horizontal6_gl" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPassBack_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/title3"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontal85_gl"
        app:layout_constraintEnd_toStartOf="@+id/vertical9_gl"
        app:layout_constraintStart_toStartOf="@+id/vertical1_gl"
        app:layout_constraintTop_toBottomOf="@id/horizontal75_gl" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal1_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal2_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal25_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal35_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal5_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal6_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal7_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal75_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal85_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical1_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical9_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>